Tests/Should_succeed/5_Functions/01_MethodCall.decaf
class Test {
	void m1(){
		WriteString("0=0");
		WriteString("\n");
	}
	void main(){
		m1();
	}
}