tests/Should_fail/5_Functions/08_CallReturnIncorrectType2.decaf
class Test {

    void m1(){
        return 1;
    }
    
	void main(){
        
	}
}